Fix bitcoin address cutting off

--- a/smallslive/static/sass/base/_typography.scss
+++ b/smallslive/static/sass/base/_typography.scss
@@ -472,3 +472,7 @@ $text-font-size-big: 2em;
   font-size: 1.2em;
   color: #808080;
 }
+
+.break-word {
+    word-break: break-all;
+}
